# axum-production-coding

./: Cargo.toml  README.md
.cargo/: config.toml
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/pwd/: error.rs  mod.rs
crates/libs/lib-auth/src/pwd/scheme/: mod.rs  scheme_01.rs  scheme_02.rs
crates/libs/lib-auth/src/token/: error.rs  mod.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/_dev_utils/: dev_db.rs
crates/libs/lib-core/src/ctx/: mod.rs
crates/libs/lib-core/src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
crates/libs/lib-core/src/model/store/: error.rs  mod.rs
crates/libs/lib-rpc/: Cargo.toml
crates/libs/lib-rpc/src/: lib.rs  params.rs  task_rpc.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: b64.rs  envs.rs  time.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/examples/: quick_dev.rs
crates/services/web-server/src/: main.rs
crates/services/web-server/src/log/: mod.rs
crates/services/web-server/src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_rpc.rs  routes_static.rs
crates/tools/gen-key/: Cargo.toml
examples/: gen_key.rs  quick_dev.rs
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql
src/: config.rs  error.rs  log.rs  main.rs  model.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
src/ctx/: error.rs  mod.rs
src/log/: mod.rs
src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
src/model/store/: mod.rs  store.rs
src/utils/: error.rs  mod.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
src/web/rpc/: mod.rs  task_rpc.rs
tests/: quick_dev.rs
web-folder/: index.html
