[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils"}
lib-auth = { path = "../../libs/lib-auth"}
# -- Async
tokio = { version = "1.38.0", features = ["full"] }
# -- JSON
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
# -- Data
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid"] }
sea-query-binder = { version = "0.5.0", features = ["sqlx-postgres", "with-uuid", "with-time"] }
sea-query = "0.30.7"
modql = { version = "0.3.10", features = ["with-sea-query"] }
# -- Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# -- Others
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
derive_more = { version = "0.99.18", features = ["from"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
serial_test = "2"
