[package]
name = "lib-rpc"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-core = { path = "../../libs/lib-core"}
# -- Async
tokio = { version = "1.38.0", features = ["full"] }
# -- Json
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
# -- Data
modql = { version = "0.3.10", features = ["with-sea-query"] }
# -- Others
derive_more = { version = "0.99.18", features = ["from"] }
