[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- App Libs
lib-auth = { path = "../../libs/lib-auth"}
lib-core = { path = "../../libs/lib-core"}
lib-rpc = { path = "../../libs/lib-rpc"}
lib-utils = { path = "../../libs/lib-utils"}
# -- Async
async-trait = "0.1.80"
tokio = { version = "1.38.0", features = ["full"] }
# -- Json
serde_json = "1.0.117"
serde_with = "3.8.1"
serde = { version = "1.0.203", features = ["derive"] }
# -- Web
axum = { version = "0.7.5", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tower-cookies = "0.10.0"
# -- Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# -- Others
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
derive_more = { version = "0.99.18", features = ["from"] }
strum_macros = "0.26.4"


[dev-dependencies]
anyhow = "1.0.86"
httpc-test = "0.1.9"
serial_test = "3.1.1"
